--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,69 @@
 body{
-    height: 100vh;
-    width: 100vh;
+    height: 100px;
+    width: 100px;
     margin: 0px;
     padding: 50px;
-    display: flex;
+    display: flexbox;
 }
+/*Post wrapper*/
 .post{
     margin: 5px;
-    border: 1px solid aqua/*erase this when finished*/;
-    display: flex;
+    border: 1px solid purple/*erase this when finished*/;
+    display: flexbox;
+    position: fixed;
+    display: block;
 }
+/*Post Head*/
 .post-head{
-
+    border: 1px solid red/*erase this when finished*/;
+    display:inline-flex;
+    position: relative;
+    align-content:space-between;
 }
+.html5-icon{
+    border: 1px solid red/*erase this when finished*/;
+    font-size: x-large;
+    position: relative;
+    align-content:space-around;
+    padding-inline: 2.5rem;
+    display: inline-flex;
+}
+.post-title{
+    border: 1px solid red/*erase this when finished*/;
+    display:flex;
+    justify-content:space-between;
+    padding: 2%;
+}
+.dotsmenu{
+    border: 1px solid red/*erase this when finished*/;
+    position: relative;
+    padding-inline: 2.5rem;
+    align-content: space-around;
+    display: inline-flex;
+}
+/*Post Image*/
 .post-img{
-    height: 30vh;
-    width: 30vh;
-    border: 0px solid black;
+    border: 1px solid red/*erase this when finished*/;
+    height: 30em;
+    width: 1em;
     display: flex;
-    
+    position: relative;
+    align-self: center;
 }
+/*Post Body*/
 .post-body{
-
+    border: 1px solid red/*erase this when finished*/;
+    height: 30px;
+    position: relative
+}
+.icons{
+    border: 1px solid red/*erase this when finished*/;
+    font-size: x-large;
+}
+.comments{
+    border: 1px solid red/*erase this when finished*/;
+}
+.liked{
+    border: 1px solid red/*erase this when finished*/;
+    /*font-weight: bolder;*/
 }
