--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,16 @@
 body{
     background-color: gray;
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    margin: 0%;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
 }
 /*Post wrapper*/
 .post{
     width: min-content;
     margin: 5px;
-    display: flexbox;
     position: relative;
     background-color: white;
     justify-items: center;
@@ -21,12 +25,10 @@ body{
     align-items: center;
 }
 .html5-icon{
-    display: flexbox;
     position: relative;
     padding: 3%;
 }
 .post-title{
-    display: flexbox;
     position: relative;
     padding: 1%;
     padding-right: 27%;
